@@ -1,5 +1,7 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache Traffic Server 3.1.4
+  *) [TS-1212] can not limit ram cache, also fix the stats.
+
   *) [TS-1214] another race condition in cache init.
 
   *) [TS-1130] Wrong CAS operation on ink_time_t on 64 bit system.
